add stream to locate metadata

--- a/config/jshint/config.json
+++ b/config/jshint/config.json
@@ -6,6 +6,7 @@
     "eqeqeq": true,
     "esnext": true,
     "globals": {
+        "global": false,
         "module": false,
         "require": false
     },
