--- a/package.json
+++ b/package.json
@@ -5,17 +5,20 @@
   },
   "description": "A simple tool to locate and strip metadata from files.",
   "devDependencies": {
+    "chai": "^3.4.1",
     "grunt": "^0.4.5",
     "grunt-cli": "^0.1.13",
     "grunt-contrib-jshint": "^0.11.3",
     "grunt-githooks": "^0.3.1",
     "grunt-karma": "^0.12.1",
+    "grunt-mocha-test": "^0.12.7",
     "karma-browserify": "^4.4.0",
     "karma-chrome-launcher": "^0.2.1",
     "karma-firefox-launcher": "^0.1.6",
     "karma-leche": "0.0.0",
     "karma-mocha": "^0.2.0",
     "karma-sinon-chai": "^1.1.0",
+    "leche": "^2.1.1",
     "load-grunt-config": "^0.17.2",
     "mocha": "^2.3.3"
   },
