--- a/package.json
+++ b/package.json
@@ -6,25 +6,26 @@
   },
   "description": "A simple tool to locate and strip metadata from files.",
   "devDependencies": {
-    "babel-plugin-transform-es2015-block-scoping": "^6.3.13",
-    "chai": "^3.4.1",
+    "babel-plugin-transform-es2015-block-scoping": "^6.4.0",
+    "chai": "^3.5.0",
     "grunt": "^0.4.5",
     "grunt-babel": "^6.0.0",
     "grunt-cli": "^0.1.13",
     "grunt-contrib-clean": "^0.7.0",
-    "grunt-contrib-jshint": "^0.11.3",
-    "grunt-githooks": "^0.4.0",
+    "grunt-contrib-jshint": "^0.12.0",
+    "grunt-githooks": "^0.5.0",
     "grunt-karma": "^0.12.1",
     "grunt-mocha-test": "^0.12.7",
-    "karma-browserify": "^4.4.2",
+    "karma-browserify": "^5.0.1",
     "karma-chrome-launcher": "^0.2.2",
     "karma-firefox-launcher": "^0.1.7",
-    "karma-leche": "0.0.1",
+    "karma-leche": "0.0.3",
     "karma-mocha": "^0.2.1",
     "karma-sinon-chai": "^1.1.0",
     "leche": "^2.1.1",
     "load-grunt-config": "^0.19.1",
-    "mocha": "^2.3.4"
+    "mocha": "^2.3.4",
+    "watchify": "^3.7.0"
   },
   "homepage": "https://github.com/chrisguttandin/metadata-detector",
   "license": "MIT",
