--- a/package.json
+++ b/package.json
@@ -6,16 +6,19 @@
   },
   "description": "A simple tool to locate and strip metadata from files.",
   "devDependencies": {
+    "babel-eslint": "^4.1.8",
     "babel-plugin-transform-es2015-block-scoping": "^6.4.0",
     "chai": "^3.5.0",
+    "eslint-config-holy-grail": "^2.0.0",
     "grunt": "^0.4.5",
     "grunt-babel": "^6.0.0",
     "grunt-cli": "^0.1.13",
     "grunt-contrib-clean": "^0.7.0",
-    "grunt-contrib-jshint": "^0.12.0",
     "grunt-githooks": "^0.5.0",
     "grunt-karma": "^0.12.1",
     "grunt-mocha-test": "^0.12.7",
+    "gruntify-eslint": "^1.3.0",
+    "karma": "^0.13.19",
     "karma-browserify": "^5.0.1",
     "karma-chrome-launcher": "^0.2.2",
     "karma-firefox-launcher": "^0.1.7",
