--- a/package.json
+++ b/package.json
@@ -6,28 +6,31 @@
   },
   "description": "A simple tool to locate and strip metadata from files.",
   "devDependencies": {
-    "babel-eslint": "^4.1.8",
+    "babel-eslint": "^6.0.4",
     "babel-plugin-transform-es2015-block-scoping": "^6.4.0",
     "chai": "^3.5.0",
     "eslint-config-holy-grail": "^2.0.0",
-    "grunt": "^0.4.5",
+    "grunt": "^1.0.1",
     "grunt-babel": "^6.0.0",
-    "grunt-cli": "^0.1.13",
-    "grunt-contrib-clean": "^0.7.0",
-    "grunt-githooks": "^0.5.0",
-    "grunt-karma": "^0.12.1",
+    "grunt-cli": "^1.2.0",
+    "grunt-contrib-clean": "^1.0.0",
+    "grunt-githooks": "^0.6.0",
+    "grunt-karma": "^1.0.0",
     "grunt-mocha-test": "^0.12.7",
-    "gruntify-eslint": "^1.3.0",
+    "gruntify-eslint": "^2.0.0",
     "karma": "^0.13.19",
     "karma-browserify": "^5.0.1",
-    "karma-chrome-launcher": "^0.2.2",
-    "karma-firefox-launcher": "^0.1.7",
+    "karma-chrome-launcher": "^1.0.1",
+    "karma-firefox-launcher": "^1.0.0",
     "karma-leche": "0.0.3",
-    "karma-mocha": "^0.2.1",
+    "karma-mocha": "^1.0.1",
     "karma-sinon-chai": "^1.1.0",
     "leche": "^2.1.1",
     "load-grunt-config": "^0.19.1",
+    "lolex": "^1.4.0",
     "mocha": "^2.3.4",
+    "sinon": "^1.17.4",
+    "sinon-chai": "^2.8.0",
     "watchify": "^3.7.0"
   },
   "homepage": "https://github.com/chrisguttandin/metadata-detector",
