--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "karma-leche": "0.0.3",
     "karma-mocha": "^1.0.1",
     "karma-safari-launcher": "^1.0.0",
+    "karma-sauce-launcher": "^1.0.0",
     "karma-sinon-chai": "^1.1.0",
     "leche": "^2.1.1",
     "load-grunt-config": "^0.19.1",
