--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
       ]
     ]
   },
+  "bugs": {
+    "url": "https://github.com/chrisguttandin/metadata-detector/issues"
+  },
   "dependencies": {
     "babel-plugin-transform-es2015-arrow-functions": "^6.8.0",
     "babel-plugin-transform-es2015-block-scoping": "^6.8.0",
