--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
             "transform-es2015-arrow-functions",
             "transform-es2015-block-scoping",
             "transform-es2015-destructuring",
+            "transform-es2015-modules-commonjs",
             "transform-es2015-parameters",
             "transform-es2015-shorthand-properties"
           ]
@@ -23,6 +24,8 @@
   "dependencies": {
     "babel-plugin-transform-es2015-arrow-functions": "^6.8.0",
     "babel-plugin-transform-es2015-block-scoping": "^6.8.0",
+    "babel-plugin-transform-es2015-destructuring": "^6.9.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.10.3",
     "babel-plugin-transform-es2015-parameters": "^6.11.4",
     "babel-plugin-transform-es2015-shorthand-properties": "^6.8.0",
     "babelify": "^7.3.0",
@@ -32,7 +35,6 @@
   "description": "A simple tool to locate and strip metadata from files.",
   "devDependencies": {
     "babel-eslint": "^6.1.2",
-    "babel-plugin-transform-es2015-destructuring": "^6.9.0",
     "chai": "^3.5.0",
     "eslint-config-holy-grail": "^5.0.0",
     "grunt": "^1.0.1",
