--- a/package.json
+++ b/package.json
@@ -1,52 +1,27 @@
 {
   "author": "Christoph Guttandin",
-  "browser": "src/browser/module.js",
-  "browserify": {
-    "transform": [
-      [
-        "babelify",
-        {
-          "plugins": [
-            "transform-es2015-arrow-functions",
-            "transform-es2015-block-scoping",
-            "transform-es2015-destructuring",
-            "transform-es2015-modules-commonjs",
-            "transform-es2015-parameters",
-            "transform-es2015-shorthand-properties"
-          ]
-        }
-      ]
-    ]
-  },
   "bugs": {
     "url": "https://github.com/chrisguttandin/metadata-detector/issues"
   },
   "dependencies": {
-    "babel-plugin-transform-es2015-arrow-functions": "^6.8.0",
-    "babel-plugin-transform-es2015-block-scoping": "^6.14.0",
-    "babel-plugin-transform-es2015-destructuring": "^6.9.0",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.10.3",
-    "babel-plugin-transform-es2015-parameters": "^6.11.4",
-    "babel-plugin-transform-es2015-shorthand-properties": "^6.8.0",
-    "babelify": "^7.3.0",
-    "browserify": "^13.1.0",
     "synchsafe": "0.0.0"
   },
   "description": "A simple tool to locate and strip metadata from files.",
   "devDependencies": {
-    "babel-eslint": "^7.0.0",
+    "babel-preset-es2015": "^6.22.0",
     "chai": "^3.5.0",
     "eslint-config-holy-grail": "^14.0.0",
     "grunt": "^1.0.1",
     "grunt-babel": "^6.0.0",
     "grunt-cli": "^1.2.0",
     "grunt-contrib-clean": "^1.0.0",
+    "grunt-contrib-uglify": "^2.0.0",
     "grunt-karma": "^2.0.0",
-    "grunt-mocha-test": "^0.13.0",
+    "grunt-sh": "^0.1.4",
+    "grunt-tslint": "^4.0.0",
     "gruntify-eslint": "^3.0.0",
-    "husky": "^0.12.0",
+    "husky": "^0.13.1",
     "karma": "^1.2.0",
-    "karma-browserify": "^5.1.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-firefox-launcher": "^1.0.0",
     "karma-leche": "0.0.8",
@@ -54,17 +29,29 @@
     "karma-safari-launcher": "^1.0.0",
     "karma-sauce-launcher": "^1.0.0",
     "karma-sinon-chai": "^1.2.4",
+    "karma-webpack": "^2.0.1",
     "leche": "^2.1.1",
     "load-grunt-config": "^0.19.1",
-    "lolex": "^1.4.0",
     "mocha": "^3.0.0",
+    "rollup": "^0.41.4",
+    "rollup-plugin-babel": "^2.7.1",
+    "rollup-plugin-commonjs": "^7.0.0",
+    "rollup-plugin-node-resolve": "^2.0.0",
     "sinon": "^1.17.4",
     "sinon-chai": "^2.8.0",
-    "watchify": "^3.7.0"
+    "ts-loader": "^2.0.0",
+    "tslint-config-holy-grail": "^5.0.1",
+    "webpack": "^2.2.0"
   },
+  "files": [
+    "build/es5/",
+    "build/es2015/",
+    "src/"
+  ],
   "homepage": "https://github.com/chrisguttandin/metadata-detector",
+  "jsnext:main": "build/es2015/module.js",
   "license": "MIT",
-  "main": "build/server/module.js",
+  "main": "build/es5/bundle.js",
   "name": "metadata-detector",
   "repository": {
     "type": "git",
@@ -72,7 +59,9 @@
   },
   "scripts": {
     "precommit": "grunt lint",
+    "prepublish": "grunt build",
     "test": "grunt lint && grunt test"
   },
+  "types": "build/es2015/module.d.ts",
   "version": "2.0.1"
 }
