export esm files

--- a/package.json
+++ b/package.json
@@ -46,12 +46,13 @@
   "files": [
     "build/es5/",
     "build/es2015/",
+    "build/esm/",
     "src/"
   ],
   "homepage": "https://github.com/chrisguttandin/metadata-detector",
   "license": "MIT",
   "main": "build/es5/bundle.js",
-  "module": "build/es2015/module.js",
+  "module": "build/esm/module.js",
   "name": "metadata-detector",
   "repository": {
     "type": "git",
