--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "url": "https://github.com/chrisguttandin/metadata-detector/issues"
   },
   "dependencies": {
+    "babel-plugin-external-helpers": "^6.22.0",
     "metadata-detector-broker": "^1.0.0",
     "metadata-detector-worker": "^1.0.2",
     "tslint": "^5.7.0"
