--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   },
   "dependencies": {
     "metadata-detector-broker": "^1.0.0",
-    "metadata-detector-worker": "^1.0.2",
-    "tslint": "^5.7.0"
+    "metadata-detector-worker": "^1.0.2"
   },
   "description": "A simple tool to locate and strip metadata from files.",
   "devDependencies": {
@@ -43,6 +42,7 @@
     "sinon-chai": "^2.13.0",
     "ts-loader": "^2.3.4",
     "tsconfig-holy-grail": "^2.2.23",
+    "tslint": "^5.7.0",
     "tslint-config-holy-grail": "^11.0.0",
     "typescript": "^2.4.2",
     "webpack": "^3.5.5"
