--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "url": "https://github.com/chrisguttandin/metadata-detector/issues"
   },
   "dependencies": {
+    "babel-runtime": "^6.26.0",
     "metadata-detector-broker": "^1.0.2",
     "metadata-detector-worker": "^1.0.4"
   },
