--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "babel-runtime": "^6.26.0",
     "metadata-detector-broker": "^1.0.2",
-    "metadata-detector-worker": "^1.0.4"
+    "metadata-detector-worker": "^1.0.4",
+    "tslib": "^1.7.1"
   },
   "description": "A simple tool to locate and strip metadata from files.",
   "devDependencies": {
