--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "bugs": {
     "url": "https://github.com/chrisguttandin/metadata-detector/issues"
   },
+  "config": {
+    "commitizen": {
+      "path": "cz-conventional-changelog"
+    }
+  },
   "dependencies": {
     "babel-runtime": "^6.26.0",
     "metadata-detector-broker": "^1.0.17",
@@ -54,8 +59,8 @@
     "webpack": "^4.1.0"
   },
   "files": [
-    "build/es5/",
     "build/es2015/",
+    "build/es5/",
     "build/esm/",
     "src/"
   ],
