build(package): update scripts property

--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "url": "https://github.com/chrisguttandin/metadata-detector.git"
   },
   "scripts": {
+    "commitmsg": "commitlint --edit --extends @commitlint/config-angular",
     "precommit": "grunt lint",
     "prepublishOnly": "grunt build",
     "test": "grunt lint && grunt test"
