--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     }
   },
   "dependencies": {
-    "babel-runtime": "^6.26.0",
+    "@babel/runtime": "^7.0.0",
     "metadata-detector-broker": "^1.0.33",
     "metadata-detector-worker": "^1.0.31",
     "tslib": "^1.9.3"
