--- a/package.json
+++ b/package.json
@@ -64,9 +64,8 @@
     "webpack": "^4.20.2"
   },
   "files": [
-    "build/es2015/",
+    "build/es2018/",
     "build/es5/",
-    "build/esm/",
     "src/"
   ],
   "homepage": "https://github.com/chrisguttandin/metadata-detector",
@@ -78,7 +77,7 @@
   },
   "license": "MIT",
   "main": "build/es5/bundle.js",
-  "module": "build/esm/module.js",
+  "module": "build/es2018/module.js",
   "name": "metadata-detector",
   "repository": {
     "type": "git",
@@ -88,6 +87,6 @@
     "prepublishOnly": "grunt build",
     "test": "grunt lint && grunt test"
   },
-  "types": "build/es2015/module.d.ts",
+  "types": "build/es2018/module.d.ts",
   "version": "5.0.46"
 }
