--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,7 @@ jobs:
         strategy:
             matrix:
                 node-version: [18.x]
-                target: [chrome, firefox, safari]
+                target: [chrome, safari]
                 type: [integration]
             max-parallel: 3
 
