--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
         "prepare": "husky",
         "prepublishOnly": "npm run build",
         "test": "npm run lint && npm run build && npm run test:integration",
-        "test:integration": "if [ \"$TYPE\" = \"\" -o \"$TYPE\" = \"integration\" ]; then karma start config/karma/config-integration.js --single-run; fi"
+        "test:integration": "if [ \"$TYPE\" = \"\" -o \"$TYPE\" = \"integration\" ]; then npx vitest --config config/vitest/integration.ts; fi"
     },
     "types": "build/es2019/module.d.ts",
     "version": "7.0.101"
